--- a/src/mmixide/mmixide.rc
+++ b/src/mmixide/mmixide.rc
@@ -29,14 +29,17 @@ IDR_ACCELERATOR ACCELERATORS
 BEGIN
     "F",            ID_EDIT_FIND,           VIRTKEY, CONTROL, NOINVERT
     "G",            ID_EDIT_FINDAGAIN,      VIRTKEY, CONTROL, NOINVERT
-    "H",            ID_EDIT_REPLACE,        VIRTKEY, CONTROL, NOINVERT
     "I",            ID_EDIT_PRETTY,         VIRTKEY, CONTROL, NOINVERT
+    "H",            ID_EDIT_REPLACE,        VIRTKEY, CONTROL, NOINVERT
     "P",            ID_FILE_PRINT,          VIRTKEY, CONTROL, NOINVERT
     "S",            ID_FILE_SAVE,           VIRTKEY, CONTROL, NOINVERT
     VK_F7,          ID_MMIX_ASSEMBLE,       VIRTKEY, NOINVERT
     VK_F5,          ID_MMIX_DEBUG,          VIRTKEY, NOINVERT
     VK_OEM_PLUS,    ID_VIEW_ZOOMIN,         VIRTKEY, CONTROL, NOINVERT
     VK_OEM_MINUS,   ID_VIEW_ZOOMOUT,        VIRTKEY, CONTROL, NOINVERT
+    VK_F11,         ID_MMIX_STEP,           VIRTKEY, NOINVERT
+    VK_F10,         ID_MMIX_STEPOVER,       VIRTKEY, NOINVERT
+    VK_F11,         ID_MMIX_STEPOUT,        VIRTKEY, SHIFT, NOINVERT
 END
 
 
