--- a/src/led/led.vcproj
+++ b/src/led/led.vcproj
@@ -39,6 +39,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				UseUnicodeResponseFiles="false"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\util;..\winopt;..\opt"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
@@ -49,6 +50,7 @@
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
+				CompileAs="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -61,7 +63,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib  comctl32.lib Htmlhelp.lib"
+				UseUnicodeResponseFiles="false"
+				AdditionalDependencies="ws2_32.lib  comctl32.lib htmlhelp.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -72,6 +75,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				UseUnicodeResponseFiles="false"
 				AdditionalManifestFiles="vmb.manifest"
 			/>
 			<Tool
@@ -99,7 +103,7 @@
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="0"
-			WholeProgramOptimization="0"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -118,17 +122,18 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
-				WholeProgramOptimization="false"
+				Optimization="3"
+				OmitFramePointers="true"
+				EnableFiberSafeOptimizations="true"
 				AdditionalIncludeDirectories="..\util;..\winopt;..\opt"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
 				RuntimeLibrary="0"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
+				CompileAs="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -141,13 +146,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib  comctl32.lib Htmlhelp.lib"
-				LinkIncremental="2"
+				UseUnicodeResponseFiles="false"
+				AdditionalDependencies="ws2_32.lib  comctl32.lib htmlhelp.lib"
+				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
-				OptimizeReferences="0"
-				EnableCOMDATFolding="0"
-				LinkTimeCodeGeneration="0"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -155,6 +160,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				UseUnicodeResponseFiles="false"
 				AdditionalManifestFiles="vmb.manifest"
 			/>
 			<Tool
@@ -203,25 +209,6 @@
 			</File>
 			<File
 				RelativePath=".\winmain.c"
-				>
-			</File>
-			<File
-				RelativePath=".\help.hhp"
-				>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="HtmlHelp Compiler"
-						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0"
-						AdditionalDependencies="$(InputDir)\help.html"
-						Outputs="$(InputDir)\help.chm"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\help.html"
 				>
 			</File>
 		</Filter>
@@ -290,6 +277,40 @@
 			</File>
 			<File
 				RelativePath="..\winopt\win32dedit.rc"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Helpfiles"
+			>
+			<File
+				RelativePath=".\help.hhp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="HtmlHelp Compiler"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;copy $(InputName).chm $(OutDir)\$(TargetName).chm&#x0D;&#x0A;"
+						AdditionalDependencies="$(InputDir)\help.html"
+						Outputs="$(OutDir)\$(TargetName).chm"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="HtmlHelp Compiler"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;copy $(InputName).chm $(OutDir)\$(TargetName).chm&#x0D;&#x0A;"
+						AdditionalDependencies="$(InputDir)\help.html"
+						Outputs="$(OutDir)\$(TargetName).chm"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\help.html"
 				>
 			</File>
 		</Filter>
