--- a/src/rom/rom.vcproj
+++ b/src/rom/rom.vcproj
@@ -39,6 +39,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				UseUnicodeResponseFiles="false"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\util;..\winopt;..\opt"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
@@ -49,6 +50,7 @@
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
+				CompileAs="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -61,7 +63,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib  comctl32.lib Htmlhelp.lib"
+				UseUnicodeResponseFiles="false"
+				AdditionalDependencies="ws2_32.lib  comctl32.lib htmlhelp.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -72,6 +75,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				UseUnicodeResponseFiles="false"
 				AdditionalManifestFiles="vmb.manifest"
 			/>
 			<Tool
@@ -118,13 +122,19 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				UseUnicodeResponseFiles="false"
+				Optimization="3"
+				OmitFramePointers="true"
+				EnableFiberSafeOptimizations="true"
 				AdditionalIncludeDirectories="..\util;..\winopt;..\opt"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="0"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
+				CompileAs="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -137,7 +147,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib  comctl32.lib Htmlhelp.lib"
+				UseUnicodeResponseFiles="false"
+				AdditionalDependencies="ws2_32.lib  comctl32.lib htmlhelp.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -150,6 +161,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				UseUnicodeResponseFiles="false"
 				AdditionalManifestFiles="vmb.manifest"
 			/>
 			<Tool
@@ -189,25 +201,6 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\help.hhp"
-				>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="HtmlHelp Compiler"
-						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0&#x0D;&#x0A;"
-						AdditionalDependencies="$(InputDir)\help.html"
-						Outputs="$(InputDir)\help.chm"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\help.html"
-				>
-			</File>
-			<File
 				RelativePath=".\rom.c"
 				>
 			</File>
@@ -221,10 +214,6 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath="..\winopt\resource.h"
-				>
-			</File>
 			<File
 				RelativePath=".\resource.h"
 				>
@@ -284,10 +273,40 @@
 				>
 			</File>
 		</Filter>
-		<File
-			RelativePath="..\winopt\resource"
+		<Filter
+			Name="Helpfiles"
 			>
-		</File>
+			<File
+				RelativePath=".\help.hhp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="HtmlHelp Compiler"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;copy $(InputName).chm $(OutDir)\$(TargetName).chm&#x0D;&#x0A;"
+						AdditionalDependencies="$(InputDir)\help.html"
+						Outputs="$(OutDir)\$(TargetName).chm"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="HtmlHelp Compiler"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;copy $(InputName).chm $(OutDir)\$(TargetName).chm&#x0D;&#x0A;"
+						AdditionalDependencies="$(InputDir)\help.html"
+						Outputs="$(OutDir)\$(TargetName).chm"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\help.html"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
